Development
    Fix view info, like view meter and view details
    Issue #467, playlist and details not disappearing
    Fix compile failure on fy.po, really dumb failure
    libgmtk - Dispose widgets properly, should solve memory leak
    libgmtk - gmtk_media_player, remove usage of GFileMonitor, not needed
    Fix window resize problem Issue #467 again
    libgmtk - gmtk_media_player, gamma is not a command line option
    libgmtk - gmtk_media_player, add video attributes
    Fix up spec file building
    When GSettings are available use them over GConf or GKeyStore
    Remove vdpau and vaapi vo devices on OpenBSD
    Use correct DVD device name on OpenBSD
    Add include to gmtk_media_player.h
    Add sndio and rtunes audio outputs for OpenBSD
    Add verbose flag to volume display
    Make volume on commandline work again
    Change volume range from 0 to 100 to 0.0 to 1.0 internally makes volume widget work
    Delete global varibles volume and idledata.volume
1.0.2
    Version Bump to 1.0.2
    Apply Patch for MpegURL playlists from Issue #491
    Apply Patch for NetBSD from Issue #490
    "fix" purals in Serbian translation. All I did was copy the last one, so probably grammer errors
    Fix volume problem when softvol and volume gain != 0
    Added support for 7.1 Surround
    Fix Software Volume, remembered value not being loaded
    Updated French translation from Starcrasher
    Updated English (Great Britian) translation
    Updated Italian translation
    Updated Dutch translation
    Updated French translation
    Updated Spanish translation
    Updated Turkish translation
    Updated Portuguese translation
    Updated Hungarian translation
    Updated Serbian translation
    Updated Czech translation
    Updated German translation
    Add Frisian translation from Launchpad
    Updated Japanese translation
    Updated Korean translation
1.0.1b1
    Updated Polish translation
    Fix cross compile to Windows