@@ -1,4 +1,5 @@
 Development
+    libgmtk - gmtk_media_player, clamp values
     Fix view info, like view meter and view details
     Issue #467, playlist and details not disappearing
     Fix compile failure on fy.po, really dumb failure
